--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Redis cache connector for deepstream.io",
   "main": "src/cache-connector.js",
   "scripts": {
-    "test": "node node_modules/jasmine-node/lib/jasmine-node/cli.js test --autotest --watch ./src"
+    "test": "node node_modules/jasmine-node/lib/jasmine-node/cli.js test",
+    "watch": "node node_modules/jasmine-node/lib/jasmine-node/cli.js test --autotest --watch ./src"
   },
   "repository": {
     "type": "git",
