--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,24 @@ env:
   - CXX=g++-4.8
 
 node_js:
-  - "stable"
-  - "6"
-  - "5"
-  - "4"
+  - "4.4.4"
 
 matrix:
   include:
-    - node_js: "4"
+    - node_js: "4.4.4"
       os: osx
 
 script:
   - npm run coverage
+  - chmod 555 scripts/package.sh && scripts/package.sh
 
 after_script:
   - "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
-  - "tar -czf deepstream.io-cache-redis-$TRAVIS_COMMIT-$TRAVIS_OS_NAME.tar.gz ."
 
 addons:
   artifacts:
     paths:
-    - $( ls deepstream.io-cache-redis* )
+    - $( ls build/*/*.tar.gz )
     target_paths:
     - $TRAVIS_REPO_SLUG
 
