--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt": "~0.4.5",
     "grunt-release": "0.9.0",
     "istanbul": "^0.4.3",
-    "mocha": "^2.5.2"
+    "mocha": "^2.5.2",
+    "rifraf": "^2.0.2"
   }
 }
