--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,7 @@
+environment:
+  REDIS_HOST: 54.93.183.16
+  REDIS_PORT: 6379
+
 os:
   - Visual Studio 2015
 
@@ -5,30 +9,44 @@ platform:
   - x64
 
 install:
-  - ps: Install-Product node 4.4.4
+  - ps: Install-Product node 4.4.5
   - npm install
 
 test_script:
   - node --version
   - npm --version
   - npm test
-  - scripts\package.bat
-
-# Environment variable needs to change
-environment:
-  REDIS_HOST: 54.93.183.16
-  REDIS_PORT: 6379
+  - bash scripts\package.sh
+  - For /d %%d in ( build\** ) do MOVE %%d %cd%
+  - For %%d in ( build\** ) do MOVE %%d %cd%
 
 artifacts:
-  - path: build\*\*.zip
+  - path: 'build\*.zip'
+    name: 'deepstream.io-connector'
+
+  - path: '**\*.zip'
+  - path: '*.zip'
 
 deploy:
-  provider: S3
-  access_key_id:
-    secure: cq7lgQP04314hwXwM2l0yiUKRcOkwHeKkDHFULrThxE=
-  secret_access_key:
-    secure: AMUWZVZ4o7lS6f5ogqxTTCqDUR/TYEmPaVXzb7yRRyFUTF/zQFnZHYk1G/j7ie8/
-  bucket: ds-server-artifacts
-  folder: $(APPVEYOR_REPO_NAME)
+
+  - provider: S3
+    access_key_id:
+      secure: cq7lgQP04314hwXwM2l0yiUKRcOkwHeKkDHFULrThxE=
+    secret_access_key:
+      secure: AMUWZVZ4o7lS6f5ogqxTTCqDUR/TYEmPaVXzb7yRRyFUTF/zQFnZHYk1G/j7ie8/
+    bucket: ds-server-artifacts
+    folder: $(APPVEYOR_REPO_NAME)
+    on:
+      appveyor_repo_tag: false
+
+  - provider: GitHub
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release description'
+    auth_token:
+      secure: tZHuiZVCwkXRYMihVyoNrmDxAm6xPbXyop7Plg5uUWIIqA1EoUCrTYd/V+0D1I+Y
+    artifact: 'deepstream.io-connector'
+    draft: true
+    on:
+      appveyor_repo_tag: true
 
 build: off
