--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/deepstreamIO/deepstream.io-cache-redis.git"
   },
   "author": "deepstreamHub GmbH",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/deepstreamIO/deepstream.io-cache-redis/issues"
   },
