--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/cache-connector.js",
   "scripts": {
     "test": "mocha",
-    "coverage": "istanbul cover _mocha",
-    "lint": "eslint \"src/**/*.js\" \"test/**/*.js\""
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha",
+    "lint": "eslint \"src/**/*.js\" \"test/**/*.js\"",
+    "ci": "npm run coverage && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,9 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
-    "eslint": "^2.10.2",
-    "grunt": "~0.4.5",
-    "grunt-release": "0.9.0",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb": "^3.1.0",
     "istanbul": "^0.4.3",
-    "mocha": "^2.5.2",
-    "rifraf": "^2.0.2"
+    "mocha": "^2.5.2"
   }
 }
