--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
+
+# Do not insert any code under here without making sures it's in publishingtest first
 language: node_js
 
-env:
-  global:
-    - CXX=g++-4.8
+plugins:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
 
 node_js:
   - "stable"
@@ -14,13 +19,10 @@ matrix:
       os: osx
 
 script:
-  - npm test
-
-after_script:
-  - "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
-
-before_deploy:
-  - chmod 555 scripts/package.sh && scripts/package.sh
+  - npm run test
+  - curl -o package.sh -L https://raw.githubusercontent.com/deepstreamIO/deepstream.io-connector-publishingtest/master/scripts/package.sh
+  - chmod 555 package.sh
+  - ./package.sh
 
 deploy:
   - provider: s3
@@ -44,9 +46,10 @@ deploy:
     on:
       tags: true
 
-plugins:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - g++-4.8
+after_deploy:
+  - curl -o test.sh -L https://raw.githubusercontent.com/deepstreamIO/deepstream.io-connector-publishingtest/master/scripts/test.sh
+  - chmod 555 test.sh
+  - ./test.sh
+
+after_script:
+  - "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
