--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+env:
+  global:
+    - CXX=g++-4.8
+    - REDIS_HOST=54.93.183.16
+    - REDIS_PORT=6379
 
 # Do not insert any code under here without making sures it's in publishingtest first
 language: node_js
