Updating to use ioredis

--- a/example-config.yml
+++ b/example-config.yml
@@ -4,3 +4,18 @@ plugins:
     options:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
+
+# Using with a cluster
+# plugins:
+#   cache:
+#     name: redis
+#     options:
+#       nodes:
+#         - host: <String>
+#           port: <Number>
+#           password: <String>
+#         - host: <String>
+#           port: <Number>
+#       maxRedirections: 16
+#       redisOptions:
+#         password: 'fallback-password'
