--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "homepage": "http://deepstream.io",
   "optionalDependencies": {
-    "hiredis": "0.4.1"
+    "hiredis": "^0.5.0"
   },
   "dependencies": {
-    "redis": "2.6.1"
+    "ioredis": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
