--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "hiredis": "^0.5.0"
   },
   "dependencies": {
-    "ioredis": "^2.2.0"
+    "ioredis": "^3.0.0-0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "coveralls": "^2.11.9",
-    "istanbul": "^0.4.3",
-    "mocha": "^3.0.1"
+    "coveralls": "^2.11.16",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0"
   }
 }
