--- a/package.json
+++ b/package.json
@@ -19,18 +19,15 @@
     "url": "https://github.com/deepstreamIO/deepstream.io-cache-redis/issues"
   },
   "homepage": "http://deepstream.io",
-  "optionalDependencies": {
-    "hiredis": "^0.5.0"
-  },
   "dependencies": {
-    "ioredis": "^3.0.0-0"
+    "ioredis": "^3.1.1"
   },
   "devDependencies": {
-    "chai": "^4.0.1",
-    "coveralls": "^2.11.9",
-    "istanbul": "^0.4.3",
-    "mocha": "^3.0.1",
-    "eslint-config-deepstream": ">=0.1.0"
+    "chai": "^4.0.2",
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.4.2",
+    "eslint-config-deepstream": ">=2.2.1"
   },
   "eslintConfig": {
     "extends": "deepstream"
