--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepstream.io-cache-redis",
-  "version": "1.2.0",
+  "version": "1.2.0-debug",
   "description": "Redis cache connector for deepstream.io",
   "main": "src/cache-connector.js",
   "scripts": {
