--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "deepstream.io-cache-redis",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Redis cache connector for deepstream.io",
-  "main": "src/cache-connector.js",
+  "main": "src/connector.js",
   "scripts": {
     "test": "mocha --exit src/",
     "coverage": "nyc mocha src/",
