--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@deepstream/cache-redis",
   "version": "2.0.0-rc.8",
   "description": "Redis cache connector for deepstream.io",
-  "main": "dist/connector.js",
+  "main": "dist/src/onnector.js",
   "scripts": {
     "tsc": "tsc",
     "lint": "tslint --project .",
