--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "coveralls": "^3.0.3",
     "mocha": "^6.2.0",
     "nyc": "^13.3.0",
+    "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.2"
   }
