--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ioredis": "^4.9.0"
   },
   "devDependencies": {
-    "@deepstream/types": "^1.0.0-rc.5",
+    "@deepstream/types": "^1.0.0",
     "@types/chai": "^4.1.7",
     "@types/ioredis": "^4.0.12",
     "@types/mocha": "^5.2.7",
