--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deepstream/cache-redis",
-  "version": "2.0.0-rc.16",
+  "version": "2.0.0",
   "description": "Redis cache connector for deepstream.io",
   "main": "dist/src/connector.js",
   "scripts": {
