--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   },
   "homepage": "http://deepstream.io",
   "dependencies": {
-    "@deepstream/types": "^1.0.1",
+    "@deepstream/types": "^1.0.2",
     "ioredis": "^4.9.0"
   },
   "devDependencies": {
+    "@deepstream/protobuf": "^1.0.0",
     "@types/chai": "^4.1.7",
     "@types/ioredis": "^4.0.12",
     "@types/mocha": "^5.2.7",
