--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "tsc": "tsc",
     "lint": "tslint --project .",
     "lint:fix": "npm run lint -- --fix",
-    "test": "mocha --opts mocha.opts 'src/*.spec.ts'",
-    "coverage": "nyc mocha src/",
-    "ci": "npm run coverage",
-    "docker": "docker start -p 6379:6379 redis"
+    "test": "mocha --opts mocha.opts 'test/*.spec.ts' --exit",
+    "coverage": "nyc mocha 'test/*.spec.ts' --exit",
+    "ci": "npm run tsc && npm run coverage",
+    "docker": "docker run -p 6379:6379 redis"
   },
   "repository": {
     "type": "git",
@@ -28,15 +28,31 @@
   },
   "devDependencies": {
     "@deepstream/protobuf": "^1.0.1",
-    "@types/chai": "^4.2.3",
-    "@types/ioredis": "^4.0.17",
+    "@types/chai": "^4.2.4",
+    "@types/ioredis": "^4.0.18",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.6",
-    "mocha": "^6.2.0",
-    "nyc": "^13.3.0",
+    "coveralls": "^3.0.7",
+    "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.4"
+  },
+  "nyc": {
+    "include": [
+      "src/*.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register/transpile-only"
+    ],
+    "reporter": [
+      "lcov"
+    ],
+    "sourceMap": true,
+    "instrument": true
   }
 }
