ci: use context

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ workflows:
               tags:
                 only: /^v.*/
         - deploy:
+            context: connectors
             requires:
               - build-and-test
             filters:
